src/pages/ar-ae/v1.26.0/product-analytics/data-management.mdx
---
title: "إدارة البيانات"
metaTitle: "إدارة البيانات - OpenReplay"
metaDescription: "تتبّع الأحداث المخصّصة وخصائص المستخدمين لتعزيز تحليلات منتجك في OpenReplay."
---

تتيح لك إدارة البيانات في OpenReplay تتبّع الأحداث المخصّصة وخصائص المستخدمين لتعزيز تحليلات منتجك. تتناول هذه الصفحة كلاً من تكامل SDK لإرسال البيانات وواجهة المستخدم لإدارتها.

للاطّلاع على وثائق SDK الكاملة، راجع [مرجع Analytics SDK](/sdk/analytics).

## نظرة عامة على الأحداث

يلتقط OpenReplay نوعين من الأحداث:

- **الأحداث الملتقطة تلقائياً**: تفاعلات يتم تتبّعها تلقائياً مثل مشاهدات الصفحات والنقرات وإرسال النماذج
- **الأحداث المخصّصة**: أحداث خاصة بمجالك تقوم بتعريفها بنفسك، مثل "اكتمال عملية الشراء" أو "تفعيل الميزة"

تتيح لك الأحداث المخصّصة تتبّع إجراءات المستخدمين المحدّدة التي تهمّ عملك، واستخدامها في ميزات التحليلات مثل [الاتجاهات](/product-analytics/trends) و[القُمَع](/product-analytics/funnels) و[الرحلات](/product-analytics/journeys).

## التقاط الأحداث

لتتبّع الأحداث المخصّصة، استخدم وحدة أحداث التحليلات في SDK. للاطّلاع على وثائق API الكاملة، راجع [مرجع Events SDK](/sdk/analytics/events).

### مثال أساسي

```ts
// Track a simple event
tracker.analytics.events.sendEvent("Button Clicked", {
  button_text: "Start",
  page: "home",
})
```

### الخصائص الفائقة (Super Properties)

الخصائص الفائقة هي أزواج مفتاح/قيمة دائمة تُرفق تلقائياً بكل حدث يتم تتبّعه:

```ts
// Set super properties that apply to all events
tracker.analytics.events.setProperty({
  app_version: "1.42.0",
  env: "prod",
})

// This event will include app_version and env automatically
tracker.analytics.events.sendEvent("Signup Started", {
  plan: "pro",
})
```

## إثراء بيانات المستخدمين

تتيح لك خصائص المستخدمين تخزين سمات حول مستخدميك لأغراض التقسيم والتحليل. للاطّلاع على وثائق API الكاملة، راجع [مرجع People SDK](/sdk/analytics/people).

### تعريف المستخدمين

```ts
// Identify the current user
tracker.analytics.people.identify("user_123")

// Set user properties
tracker.analytics.people.setProperties({
  email: "user@example.com",
  plan: "pro",
})
```

### أنواع الخصائص

يدعم OpenReplay عدة أنواع من الخصائص:

| النوع | الوصف | أمثلة |
|------|-------------|----------|
| **متتبَّعة تلقائياً** | يتم التقاطها تلقائياً بواسطة SDK | الجهاز، المتصفح، نظام التشغيل، معلمات UTM، المُحيل |
| **خاصة** | خصائص خاصة ذات سلوك محدّد | `$user_id`، `$email`، `$name` |
| **مخصّصة** | خصائص يعرّفها المستخدم | `plan type`، `company`، `signup date` |

## إدارة البيانات في واجهة المستخدم

يوفّر OpenReplay واجهة لإدارة البيانات لتصفّح المستخدمين والأحداث وخصائصها المعنية وتصفيتها وتنظيمها.

### الأشخاص (People)

<img src="/data-management/people-page.png" alt="صفحة الأحداث" style={{ width: '700px', height: 'auto' }} />

توفّر علامة التبويب "الأشخاص" عرضاً لمستخدميك المعرَّفين:

- تصفّح المستخدمين وخصائصهم
- البحث باستخدام معرّف المستخدم أو قيم الخصائص
- عرض نشاط المستخدم وسجلّ الجلسات
- الوصول إلى ملفات تعريف المستخدمين الفردية

### الأحداث

<img src="/data-management/events-page.png" alt="صفحة الأحداث" style={{ width: '700px', height: 'auto' }} />

تعرض علامة التبويب "الأحداث" جميع أنواع الأحداث المتتبَّعة في مشروعك:

- تصفّح الأحداث والبحث عنها بالاسم
- التصفية حسب نوع الحدث (الملتقطة تلقائياً مقابل المخصّصة)
- تعديل البيانات الوصفية للحدث (الاسم المعروض، الوصف)
- التحكّم في ظهور الحدث في لوحات المعلومات والمرشّحات

### الخصائص

<img src="/data-management/props-page.png" alt="صفحة الأحداث" style={{ width: '700px', height: 'auto' }} />

تتيح لك علامة التبويب "الخصائص" إدارة كلٍّ من خصائص المستخدمين وخصائص الأحداث:

- التبديل بين خصائص المستخدمين وخصائص الأحداث
- عرض أنواع الخصائص وتوزيعات القيم
- تعديل الأسماء المعروضة للخصائص
- التحكّم في ظهور الخصائص في لوحات المعلومات والمرشّحات 

### النشاط

<img src="/data-management/activity-page.png" alt="صفحة الأحداث" style={{ width: '700px', height: 'auto' }} />

تعرض علامة التبويب "النشاط" تدفقاً للأحداث في الوقت الفعلي:

- مراقبة الأحداث أثناء استيعابها
- التصفية حسب نوع الحدث أو المستخدم
- التحقّق من أنّ الأحداث يتم التقاطها بشكل صحيح

### الإجراءات (Actions)

تتيح لك الإجراءات تجميع عدة أحداث في مجموعة واحدة قابلة لإعادة الاستخدام باسم ووصف مخصّصين. فبدلاً من تحديد أحداث فردية في كل مرة، يمكنك تعريف إجراء (Action) مرة واحدة واستخدامه في جميع أنحاء OpenReplay.

لإنشاء إجراء (Action):

1. انتقل إلى علامة التبويب **Actions** في إدارة البيانات
2. انقر على **Create Action**
3. امنحه اسماً ووصفاً اختيارياً
4. حدّد الأحداث المراد تضمينها في المجموعة
5. احفظ الإجراء (Action)

بعد إنشائها، يمكن استخدام الإجراءات (Actions) في:

- **البحث عن الجلسات** — قم بتصفية الجلسات حسب الإجراء (Action) للعثور بسرعة على نشاط المستخدم ذي الصلة
- **لوحات المعلومات** — استخدم الإجراءات (Actions) كمقياس في مخططاتك وأدواتك
- **تحليلات المستخدمين** — قسِّم المستخدمين وحلّلهم استناداً إلى حدوث الإجراء (Action)

### الأسماء المستعارة المتوافقة مع Mixpanel

تدعم جميع الطرق طبقة توافق مُتاحة لتسهيل الاعتياد:

```ts
tracker.analytics.people.set            // setProperties
tracker.analytics.people.set_once       // setPropertiesOnce
tracker.analytics.people.append         // appendValues
tracker.analytics.people.union          // appendUniqueValues
tracker.analytics.people.incrementBy    // increment
tracker.analytics.events.register       // setProperty
tracker.analytics.events.register_once  // setPropertiesOnce
tracker.analytics.events.unregister     // unsetProperties
tracker.analytics.events.track          // sendEvent
```

## هل لديك أسئلة؟

إذا واجهت أي مشكلات، تواصل معنا عبر [Slack](https://slack.openreplay.com) أو تفقّد [المنتدى](https://forum.openreplay.com) الخاص بنا واحصل على المساعدة من مجتمعنا.
