src/pages/ar-ae/v1.27.0/product-analytics/data-management.mdx
---
title: "إدارة البيانات"
metaTitle: "إدارة البيانات - OpenReplay"
metaDescription: "تتبّع الأحداث المخصّصة وخصائص المستخدمين لتعزيز تحليلات منتجك في OpenReplay."
---

تتيح لك إدارة البيانات في OpenReplay تتبّع الأحداث المخصّصة وخصائص المستخدمين لتعزيز تحليلات منتجك. تتناول هذه الصفحة كلاً من تكامل SDK لإرسال البيانات وواجهة المستخدم لإدارتها.

للاطّلاع على وثائق SDK الكاملة، راجع [مرجع Analytics SDK](/sdk/analytics).

## نظرة عامة على الأحداث

يلتقط OpenReplay نوعين من الأحداث:

- **الأحداث الملتقطة تلقائياً**: تفاعلات يتم تتبّعها تلقائياً مثل مشاهدات الصفحات والنقرات وإرسال النماذج
- **الأحداث المخصّصة**: أحداث خاصة بمجالك تقوم بتعريفها بنفسك، مثل "اكتمال عملية الشراء" أو "تفعيل الميزة"

تتيح لك الأحداث المخصّصة تتبّع إجراءات المستخدمين المحدّدة التي تهمّ عملك، واستخدامها في ميزات التحليلات مثل [الاتجاهات](/product-analytics/trends) و[القُمَع](/product-analytics/funnels) و[الرحلات](/product-analytics/journeys).

## التقاط الأحداث

لتتبّع الأحداث المخصّصة، استخدم وحدة أحداث التحليلات في SDK. للاطّلاع على وثائق API الكاملة، راجع [مرجع Events SDK](/sdk/analytics/events).

### مثال أساسي

```ts
// Track a simple event
tracker.analytics.events.sendEvent("Button Clicked", {
  button_text: "Start",
  page: "home",
})
```

### الخصائص الفائقة (Super Properties)

الخصائص الفائقة هي أزواج مفتاح/قيمة دائمة تُرفق تلقائياً بكل حدث يتم تتبّعه:

```ts
// Set super properties that apply to all events
tracker.analytics.events.setProperty({
  app_version: "1.42.0",
  env: "prod",
})

// This event will include app_version and env automatically
tracker.analytics.events.sendEvent("Signup Started", {
  plan: "pro",
})
```

## إثراء بيانات المستخدمين

تتيح لك خصائص المستخدمين تخزين سمات حول مستخدميك لأغراض التقسيم والتحليل. للاطّلاع على وثائق API الكاملة، راجع [مرجع People SDK](/sdk/analytics/people).

### تعريف المستخدمين

```ts
// Identify the current user
tracker.analytics.people.identify("user_123")

// Set user properties
tracker.analytics.people.setProperties({
  email: "user@example.com",
  plan: "pro",
})
```

### أنواع الخصائص

يدعم OpenReplay عدة أنواع من الخصائص:

| النوع | الوصف | أمثلة |
|------|-------------|----------|
| **متتبَّعة تلقائياً** | يتم التقاطها تلقائياً بواسطة SDK | الجهاز، المتصفح، نظام التشغيل، معلمات UTM، المُحيل |
| **خاصة** | خصائص خاصة ذات سلوك محدّد | `$user_id`، `$email`، `$name` |
| **مخصّصة** | خصائص يعرّفها المستخدم | `plan type`، `company`، `signup date` |

## إدارة البيانات في واجهة المستخدم

يوفّر OpenReplay واجهة لإدارة البيانات لتصفّح المستخدمين والأحداث وخصائصها المعنية وتصفيتها وتنظيمها.

### الأشخاص (People)

<img src="/data-management/people-page.png" alt="صفحة الأحداث" style={{ width: '700px', height: 'auto' }} />

توفّر علامة التبويب "الأشخاص" عرضاً لمستخدميك المعرَّفين:

- تصفّح المستخدمين وخصائصهم
- البحث باستخدام معرّف المستخدم أو قيم الخصائص
- عرض نشاط المستخدم وسجلّ الجلسات
- الوصول إلى ملفات تعريف المستخدمين الفردية

### الأحداث

<img src="/data-management/events-page.png" alt="صفحة الأحداث" style={{ width: '700px', height: 'auto' }} />

تعرض علامة التبويب "الأحداث" جميع أنواع الأحداث المتتبَّعة في مشروعك:

- تصفّح الأحداث والبحث عنها بالاسم
- التصفية حسب نوع الحدث (الملتقطة تلقائياً مقابل المخصّصة)
- تعديل البيانات الوصفية للحدث (الاسم المعروض، الوصف)
- التحكّم في ظهور الحدث في لوحات المعلومات والمرشّحات

### الخصائص

<img src="/data-management/props-page.png" alt="صفحة الأحداث" style={{ width: '700px', height: 'auto' }} />

تتيح لك علامة التبويب "الخصائص" إدارة كلٍّ من خصائص المستخدمين وخصائص الأحداث:

- التبديل بين خصائص المستخدمين وخصائص الأحداث
- عرض أنواع الخصائص وتوزيعات القيم
- تعديل الأسماء المعروضة للخصائص
- التحكّم في ظهور الخصائص في لوحات المعلومات والمرشّحات 

### النشاط

<img src="/data-management/activity-page.png" alt="صفحة الأحداث" style={{ width: '700px', height: 'auto' }} />

تعرض علامة التبويب "النشاط" تدفقاً للأحداث في الوقت الفعلي:

- مراقبة الأحداث أثناء استيعابها
- التصفية حسب نوع الحدث أو المستخدم
- التحقّق من أنّ الأحداث يتم التقاطها بشكل صحيح

### الشرائح (Segments)

تتيح لك الشرائح تجميع عدة أحداث في مجموعة واحدة قابلة لإعادة الاستخدام باسم ووصف مخصّصين. فبدلاً من تحديد أحداث فردية في كل مرة، يمكنك تعريف شريحة (Segment) مرة واحدة واستخدامها في جميع أنحاء OpenReplay.

<img src="/data-management/segments-list.png" alt="قائمة الشرائح" style={{ width: '700px', height: 'auto' }} />

لإنشاء شريحة (Segment):

1. انتقل إلى علامة التبويب **Segments** في إدارة البيانات
2. انقر على **Create**
3. غيّر الاسم وحدّد مستوى الظهور
4. حدّد الأحداث والمرشّحات المراد تضمينها في المجموعة
5. أنشئ الشريحة (Segment)

بعد إنشائها، يمكن استخدام الشرائح (Segments) في:

- **Sessions** — قم بتصفية الجلسات حسب الشريحة (Segment)، على نحو مشابه للبحث المحفوظ، للعثور بسرعة على نشاط المستخدم ذي الصلة
- **Cards** — استخدم الشريحة (Segment) كمرشّح في بطاقاتك

<img src="/data-management/segments-search.png" alt="استخدام الشرائح في البحث عن الجلسات" style={{ width: '700px', height: 'auto' }} />

### الميزات (Features)

تتيح لك الميزات فحص عنصر ما بصرياً داخل تسجيل جلسة ووسمه، بحيث يمكنك تتبّع النقرات بسهولة عبر إعادة استخدامه في أجزاء أخرى مختلفة من التطبيق.

<img src="/data-management/features-create.png" alt="إنشاء ميزة" style={{ width: '700px', height: 'auto' }} />

لإنشاء ميزة (Feature):

1. أعد تشغيل أحد التسجيلات ثم انقر على علامة التبويب **Tag** في الزاوية العلوية اليمنى
2. استخدم الفأرة لتحديد/وسم عنصر بصري من التسجيل. بعد تحديد العنصر، سيُملأ محدّد CSS الخاص به تلقائياً. يمكنك تغييره إذا لزم الأمر.
3. تجاهل النقرات الميتة (dead clicks) أو نقرات الغضب (rage clicks) عند حدوثها
4. حدّد النطاق (تتبّع النقرات في التطبيق بأكمله، أو في الصفحة المعروضة في التسجيل فقط)
5. احفظ الميزة (Feature)

يمكن إدارة ميزاتك في قسم مخصّص:

<img src="/data-management/features-list.png" alt="قائمة الميزات" style={{ width: '700px', height: 'auto' }} />

بعد إنشائها، يمكن استخدام الميزات (Features) في:

- **Sessions** — قم بتصفية الجلسات حسب الميزة (Feature)، على نحو مشابه للبحث المحفوظ، للعثور بسرعة على نشاط المستخدم ذي الصلة
- **Cards** — استخدم الميزة (Feature) كمرشّح في بطاقاتك

<img src="/data-management/features-search.png" alt="استخدام الميزات في البحث عن الجلسات" style={{ width: '700px', height: 'auto' }} />

### الأسماء المستعارة المتوافقة مع Mixpanel

تدعم جميع الطرق طبقة توافق مُتاحة لتسهيل الاعتياد:

```ts
tracker.analytics.people.set            // setProperties
tracker.analytics.people.set_once       // setPropertiesOnce
tracker.analytics.people.append         // appendValues
tracker.analytics.people.union          // appendUniqueValues
tracker.analytics.people.incrementBy    // increment
tracker.analytics.events.register       // setProperty
tracker.analytics.events.register_once  // setPropertiesOnce
tracker.analytics.events.unregister     // unsetProperties
tracker.analytics.events.track          // sendEvent
```

## هل لديك أسئلة؟

إذا واجهت أي مشكلات، تواصل معنا عبر [Slack](https://slack.openreplay.com) أو تفقّد [المنتدى](https://forum.openreplay.com) الخاص بنا واحصل على المساعدة من مجتمعنا.
